--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
   margin: 40px auto 30px;
 }
 .how-to-play__photo-wrapper {
-  width: 48%;
+  width: 38%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -41,13 +41,18 @@
 .how-to-play__text {
   font-size: 20px;
   margin: 0;
-  width: 48%;
+  width: 60%;
 }
 
 .how-to-play__close {
   position: absolute;
   right: 32px;
   top: 32px;
+}
+@media screen and (max-width: 1500px) {
+ .how-to-play__text {
+  font-size: 17px;
+} 
 }
 .modal {
 }
