--- a/how-to-play/how-to-play_modal.css
+++ b/how-to-play/how-to-play_modal.css
@@ -12,7 +12,7 @@
 }
 .how-to-play__headline,
 .how-to-play__text {
-  font-family: "Open Sans", sans-serif;
+  font-family: var(--main-font);
 }
 .how-to-play__wrapper {
   display: flex;
