--- a/start/variables.css
+++ b/start/variables.css
@@ -1,5 +1,6 @@
 :root {
   --main-blue: rgb(44, 80, 241);
-  --main-yellow:#ecc408;
-  --main-font:"Open Sans", sans-serif;
+  --main-yellow: #ecc408;
+  --main-font: "Open Sans", sans-serif;
+  --main-shadow: 5px 10px rgba(0, 0, 0, 0.25);
 }
