--- a/start/variables.css
+++ b/start/variables.css
@@ -3,4 +3,5 @@
   --main-yellow: #ecc408;
   --main-font: "Open Sans", sans-serif;
   --main-shadow: 5px 10px rgba(0, 0, 0, 0.25);
+  --small-shadow: 2px 5px rgba(0, 0, 0, 0.25);
 }
