--- a/site/styles.css
+++ b/site/styles.css
@@ -4,7 +4,9 @@
 @import "./start_modal.css";
 @import "./game_and_menu.css";
 html {
-  margin-top: -10px;
+  /* margin-top: -10px; */
+  max-height: 100vh;
+  max-width: 100vw;
 }
 .main {
   height: 100vh;
