--- a/site/css/game_and_menu.css
+++ b/site/css/game_and_menu.css
@@ -12,7 +12,6 @@
 }
 .card {
   perspective: 1000px;
-  transform-style: flat;
   margin: 5px;
   width: 150px;
   height: 240px;
@@ -29,6 +28,7 @@
 }
 .card__photo,
 .card__back {
+  backface-visibility: hidden;
   position: absolute;
   top: 0;
   left: 0;
@@ -36,14 +36,12 @@
   height: 100%;
 }
 .card__photo {
-  opacity: 0;
   transform: rotateY(-180deg);
 }
 .card__back {
   transform: rotateY(0deg);
 }
 .choosed {
-  opacity: 1;
   transform: rotateY(0deg);
 }
 .flip {
@@ -271,7 +269,7 @@ align-items:;
   right: 3px;
   width: 20px;
   height: 20px;
-  background: url(./img/lock-closed.svg);
+  background: url(../img/lock-closed.svg);
 }
 .count-player__wrapper {
   width: 65%;
@@ -290,7 +288,7 @@ align-items:;
   left: 0; */
   opacity: 0.8;
   z-index: 1;
-  background-image: url("./img/congratulation.gif");
+  background-image: url("../img/congratulation.gif");
 }
 .game__start-number {
   font-size: 150px;
@@ -298,12 +296,13 @@ align-items:;
   font-family: var(--main-font);
   background-color: var(--main-yellow);
   font-weight: 800;
-  transition: 600ms linear;
-  z-index: 2;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
+  transition: 500ms linear;
+  /* top: 50%;
+  left: 50%; */
+  /* transform: translate(-50%, -50%); */
+  /* position: absolute; */
+  top: 0;
+  left: 0;
   display: block;
   text-align: center;
   min-width: 200px;
@@ -311,7 +310,12 @@ align-items:;
   border-radius: 20px;
 }
 .game__start-number-wrapper {
+  z-index: 2;
   transition: 400ms linear;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 @media screen and (max-width: 768px) {
   
