--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -12,7 +12,7 @@ html {
 .main {
   padding: 20px;
   height: 100vh;
-  background: url(./img/bg1.jpg) no-repeat center;
+  background: url(../img/bg1.jpg) no-repeat center;
   background-size: cover;
 }
 
