--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -1,6 +1,7 @@
 @import "./reset.css";
 @import "./variables.css";
 @import "./how-to-play_modal.css";
+@import "./authors.css";
 @import "./start_modal.css";
 @import "./game_and_menu.css";
 @import "./win-modal.css";
