--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -3,16 +3,17 @@
 @import "./how-to-play_modal.css";
 @import "./authors.css";
 @import "./start_modal.css";
-@import "./game_and_menu.css";
+@import "./menu.css";
+@import "./game.css";
 @import "./win-modal.css";
 html {
   /* margin-top: -10px; */
-  max-height: 100vh;
-  max-width: 100vw;
+  /* max-height: 100vh;
+  max-width: 100vw; */
 }
 .main {
-  padding: 20px;
-  height: 100vh;
+  /* padding: 20px; */
+  min-height: 100vh;
   background: url(../img/bg1.jpg) no-repeat center;
   background-size: cover;
 }
