--- a/site/css/win-modal.css
+++ b/site/css/win-modal.css
@@ -4,9 +4,15 @@
   max-width: 1200px;
   width: 90%;
 }
+picture{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .win__img {
-  width: 70%;
+  width: 100%;
   max-width: 580px;
+  /* display: block; */
 }
 .win__headline {
   margin-bottom: 80px;
