--- a/site/css/game.css
+++ b/site/css/game.css
@@ -21,16 +21,16 @@
   position: relative;
 }
 .card-container--12 {
-  max-width: 650px;
+  max-width: 750px;
 }
 .card-container--18 {
-  max-width: 1050px;
+  max-width: 1200px;
 }
 .card-container--24 {
-  max-width: 800px;
+  max-width: 880px;
 }
 .card-container--36 {
-  max-width: 1100px;
+  max-width: 1300px;
 }
 /* 1.48 */
 .card-container--12 > .card {
@@ -54,7 +54,7 @@
 .card__photo,
 .card__back {
   transition: 400ms linear;
-  border-radius: 9px;
+  border-radius: 6%;
 }
 .card:active {
   transform: scale(0.95);
@@ -158,13 +158,13 @@
 }
 .game__start-number {
   font-size: 150px;
+  position: absolute;
+  transform: translate(-50%, -50%) scale(0.8);
   color: #fff;
   font-family: var(--main-font);
   background-color: var(--main-yellow);
   font-weight: 800;
   transition: 500ms linear;
-  top: 0;
-  left: 0;
   display: block;
   text-align: center;
   min-width: 200px;
@@ -182,4 +182,59 @@
 .scaled {
   transform: scale(5);
   transition: 300ms linear;
+}
+@media screen and (max-height: 835px) {
+  .card-container--12 {
+    max-width: 600px;
+  }
+  .card-container--18 {
+    max-width: 900px;
+  }
+  .card-container--24 {
+    max-width: 680px;
+  }
+  .card-container--36 {
+    max-width: 1000px;
+  }
+}
+@media screen and (max-height: 670px) {
+  .card-container--12 {
+    max-width: 500px;
+  }
+  .card-container--18 {
+    max-width: 750px;
+  }
+  .card-container--24 {
+    max-width: 562px;
+  }
+  .card-container--36 {
+    max-width: 845px;
+  }
+}@media screen and (max-height: 555px) {
+  .card-container--12 {
+    max-width: 400px;
+  }
+  .card-container--18 {
+    max-width: 600px;
+  }
+  .card-container--24 {
+    max-width: 450px;
+  }
+  .card-container--36 {
+    max-width: 680px;
+  }
+}
+@media screen and (max-height: 445px) {
+  .card-container--12 {
+    max-width: 350px;
+  }
+  .card-container--18 {
+    max-width: 500px;
+  }
+  .card-container--24 {
+    max-width: 400px;
+  }
+  .card-container--36 {
+    max-width: 550px;
+  }
 }
