--- a/site/css/menu.css
+++ b/site/css/menu.css
@@ -9,7 +9,7 @@
   position: absolute;
   opacity: 0;
   visibility: hidden;
-  z-index: -1;
+  /* z-index: -1; */
 }
 .settings__wrapper {
   padding: 45px 0 65px;
