--- a/site/css/variables.css
+++ b/site/css/variables.css
@@ -19,3 +19,17 @@
   background: url(../img/bg1.jpg) no-repeat center;
   background-size: cover;
 }
+picture{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.hidden-modal {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.8);
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
+  z-index: -1;
+}
