add arcade mode

--- a/site/css/game.css
+++ b/site/css/game.css
@@ -158,6 +158,7 @@
   background-image: url(../img/congratulation.gif);
 }
 .game__start-number {
+  /* transform: scale(0.1); */
   font-size: 150px;
   position: absolute;
   transform: translate(-50%, -50%) scale(0.8);
@@ -183,6 +184,12 @@
 .scaled {
   transform: scale(5);
   transition: 300ms linear;
+}
+.scaled-number{
+  /* opacity: 0.5; */
+  transform: scale(0.05);
+  transition: 500ms linear;
+  transform: translate(-50%, -50%);
 }
 @media screen and (max-height: 835px) {
   .card-container--12 {
