--- a/site/css/win-modal.css
+++ b/site/css/win-modal.css
@@ -56,6 +56,42 @@
 .win__content-wrapper {
   padding-top: 70px;
 }
+.win__arcade{
+  max-width: 880px;
+  background-image: url(../img/bd_winner-arcade.jpg);
+  background-size: cover;
+  background-position: center;
+  padding: 390px 20px 20px 20px;
+  border-radius: 15px;
+  border-bottom: 5px solid var(--main-blue);
+}
+.win__btn--arcade{
+  /* height: 130px;
+  width: 350px; */
+  background-color: var(--main-blue);
+opacity: 0.75;
+margin-bottom: 0;
+}
+.win__btn--arcade:active{
+  opacity: 1;
+}
+.win__arcade-wrapper{
+  /* position: absolute; */
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+@media screen and (min-width:1000px){
+  .win__btn {
+  width: 250px;
+  height: 100px;
+}.win__btn-text {
+  font-size: 28px;
+}
+.win__img {
+  max-width: 450px;
+}
+}
 @media screen and (max-width: 1000px) {
   .win__btn {
   width: 250px;
