--- a/site/css/how-to-play_modal.css
+++ b/site/css/how-to-play_modal.css
@@ -4,7 +4,7 @@
   border: 1px black solid;
   max-width: 1200px;
   /* height: 692px; */
-  width: 70vw;
+  width: 80vw;
   text-align: center;
   padding: 0 32px 32px;
   border-radius: 10px;
@@ -19,27 +19,29 @@
   justify-content: space-between;
 }
 .how-to-play__headline {
+  font-weight: 700;
   display: inline-block;
   font-size: 42px;
   margin: 40px auto 30px;
 }
 .how-to-play__photo-wrapper {
-  width: 38%;
+  width: 60%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
 }
-.how-to-play__photo-wrapper > div {
-  width: 100%;
+.how-to-play__img {
+  width: 60%;
   height: 48%;
   border: 1px black solid;
+  
 }
 .how-to-play__text {
   font-size: 28px;
-
   margin: 0;
-  width: 60%;
+  width: 40%;
 }
 
 .how-to-play__close {
