--- a/site/css/how-to-play_modal.css
+++ b/site/css/how-to-play_modal.css
@@ -36,7 +36,7 @@
   width: 60%;
   height: 48%;
   border: 1px black solid;
-  
+  /* object-fit: cover; */
 }
 .how-to-play__text {
   font-size: 28px;
